style.css
/* GENERAL */
html,
body {
  max-width: 100%;
  overflow-x: hidden;
}
body {
  background-color: pink;
  font-family: "Roboto", sans-serif;
  font-size: 14px;
  font-weight: bold;
  background-color: rgb(243, 243, 243);
  margin: 0 auto;
  box-sizing: border-box;
}

textarea:focus,
input:focus {
  outline: none;
}

.main-content {
  margin: 0 auto;
  max-width: 1280px;
}

.flex {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
  align-items: center;
  justify-content: stretch;
  gap: 10px;
}

h3 {
  transform: translateY(-15px);
  font-size: 16px;
}

h4 {
  font-weight: 400;
  transform: translateY(15px);
  font-size: 12px;
}

/* HEADER */

.logo {
  align-items: center;
}

.header {
  color: rgb(243, 243, 243);
  background-color: #131921;
  padding: 0 10px;
  height: 60px;
  cursor: pointer;
}
.search-bar,
form {
  flex-grow: 1;
}

form {
  background-color: white;
  border-radius: 4px;
}

form:focus-within {
  outline: 2px solid #c47600;
}

form:focus {
  outline: 0px;
  text-decoration: none;
}

input {
  background-color: white;
  border: none;
  padding-left: 10px;
}

button[type="submit"] {
  background-color: #ff9900;
  border: none;
  border-radius: 0 4px 4px 0;
  padding: 8px;
  margin: 0 auto;
}

.flex-within {
  display: flex;
  align-items: center;
  gap: 5px;
  justify-content: start;
  /* padding: 5px 0px; */
  height: 38px;
}

.flex-within div {
  display: flex;
  flex-direction: column;
  /* max-height: 40px; */
}

/* TAG BAR */

.overflow-hidden {
  overflow-x: hidden;
  position: absolute;
  width: 1280px;
}

.tag-bar {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 4px;
}

.button-tag {
  border: none;
  background-color: #232f3e;
  color: white;
  padding: 10px 15px;
  font-size: 14px;
  border-radius: 4px;
  margin: 10px 1px;
  cursor: pointer;
}

/* HERO SECTION */

.hero-image {
  width: fit-content;
}
.hero-image img {
  /* overflow: hidden; */
  background-image: url(./images/hero.png);
  background-size: cover;
  width: 100%;
  background: linear-gradient(45deg, red, blue);
}

.gradient {
  z-index: 10;
  width: 100%;
  height: 100px;
  background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgb(243, 243, 243));
  position: absolute;
  transform: translateY(-103px);
}

.button-cta {
  border: none;
  font-weight: bold;
  padding: 15px 30px;
  font-size: 32px;
  background-color: #87ecc1;
  border-radius: 50px;
  color: #242f3f;
  cursor: pointer;
  position: absolute;
  transform: translateY(-160px) translateX(50px);
  z-index: 20;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}
/* ITEM CATEGORIES */

.collection {
  margin-left: 20px;
  margin-bottom: 60px;
  overflow-x: hidden;
  width: 1280px;
}

.flex-collection {
  gap: 10px;
  overflow: hidden;
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
  /* align-items: center; */
  /* justify-content: stretch; */
}

.image-container {
  overflow: hidden;
  width: 175px;
  height: 225px;
}

.image-container > * {
  width: 175px;
  height: 225px;
  object-fit: cover;
  margin: 0 auto;
  border-radius: 4px;
}

.category-3 {
  margin: 50px 0;
}

/* BANNER */
.banner img {
  width: 100%;
}

/* BACK TO TOP */

.back-to-top {
  text-align: center;
  color: #ddd;
  padding-top: 20px;
  cursor: pointer;
}

/* FOOTER */
/* Variables */
:root {
  --bp-850: only screen and (max-width: 850px);
  --amazon-grey: #ddd;
  --amazon-grey--dark: #231f20;
  --amazon-border: #333;
}

/* Amazon Footer */
.amazon-footer {
  background-color: #232f3e;
}
.amazon-footer-container {
  width: 90%;
  max-width: 1000px;
  margin: 0 auto;
}
.amazon-footer-logo-image {
  max-width: 160px;
}

/* Footer Columns */
.amazon-row {
  display: flex;
  justify-content: space-between;
}
.amazon-col--20 {
  flex-basis: 20%;
  max-width: 20%;
}
.amazon-col--30 {
  flex-basis: 30%;
  max-width: 30%;
}

/* Footer Lists */
.amazon-footer-lists {
  padding: 40px 0;
}
.amazon-footer-list-item {
  margin-bottom: 8px;
}
.amazon-footer-list-item:last-child {
  margin-bottom: 0;
}

/* Typography */
.amazon-footer-title {
  margin-bottom: 20px;
  font-size: 16px;
  line-height: 20px;
  color: white;
}
.amazon-footer-text,
.amazon-footer-link {
  font-size: 13px;
  line-height: 20px;
  color: var(--amazon-grey);
}
.amazon-footer-link:hover {
  color: white;
}

/* Sub Footer */
.amazon-sub-footer {
  padding: 12px 0;
  border-top: 1px solid var(--amazon-border);
  line-height: 0;
}
.amazon-sub-footer .amazon-col:last-child {
  text-align: right;
}
.amazon-sub-footer .amazon-footer-list-item {
  display: inline-block;
  margin-left: 20px;
  margin-bottom: 0;
}
.amazon-sub-footer .amazon-footer-link:hover {
  color: white;
}
.amazon-sub-footer .amazon-footer-link,
.amazon-sub-footer .amazon-footer-text {
  font-size: 12px;
  color: #999;
}

ul,
li,
p {
  margin: 0;
  padding: 0;
  list-style-type: none;
}
a {
  text-decoration: none;
}
.amazon-footer {
  /* position: absolute; */
  width: 100%;
  bottom: 0;
}

@media (max-width: 700px) {
  .sm-hidden {
    display: none;
  }
  .button-cta {
    font-size: 24px;
  }
}

@media (min-width: 1080px) {
  .header {
    gap: 60px;
  }
}

